fixing spacing v4

--- a/src/index.css
+++ b/src/index.css
@@ -1766,7 +1766,7 @@ select.postingage-cta-input {
 
 .newsletter {
   background: #ffffff;
-  padding: 144px 24px 144px; /* top reduced so it matches bottom visually */
+  padding: 200x 24px 144px; /* top reduced so it matches bottom visually */
 }
 
 
